# Projeto-integrador-II

./: README.md
atividades/atv_01/: README.md
atividades/atv_02/: README.md
atividades/atv_03/: README.md
atividades/atv_04/: README.md
atividades/atv_05/: README.md
atividades/atv_05/backend/: controls.sql
atividades/atv_05/backend/django/: db.sqlite3  pyproject.toml
atividades/atv_05/backend/django/hotel/: settings.py  urls.py
atividades/atv_05/backend/django/sistema/: admin.py  models.py  serializers.py  views.py
atividades/atv_05/frontend/: jsconfig.json  package-lock.json  package.json
atividades/atv_05/frontend/src/: App.vue
atividades/atv_05/frontend/src/components/: formComponent.vue  headerComponent.vue  hollowComponent.vue  roomComponent.vue
atividades/atv_05/frontend/src/plugins/: axios.js
atividades/atv_05/frontend/src/router/: index.js
atividades/atv_05/frontend/src/stores/: login.js
atividades/atv_05/frontend/src/views/: adminView.vue  roomView.vue
projeto_01/: README.md
projeto_01/backend/: db.sqlite3  pyproject.toml
projeto_01/backend/alunos/: models.py  serializers.py  views.py
projeto_01/backend/alunos/migrations/: 0001_initial.py  0002_cidade_aluno.py
projeto_01/backend/config/: settings.py  urls.py
