[project]
name = "estudos"
version = "0"
description = "Default template for PDM package"
authors = [
    {name = "Davi Prussek", email = "davi.mariano.prussek0916@gmail.com"},
]
dependencies = ["django>=4.2.27"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
